--- a/Admin/src/main/resources/application.properties
+++ b/Admin/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8019
+#server.port=8019
 server.servlet.context-path=/admin
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
@@ -9,10 +9,14 @@ spring.thymeleaf.content-type=text/html
 spring.thymeleaf.cache=false
 
 
-spring.datasource.url=jdbc:mysql://localhost/skin_store_valorant?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/skin_store_valorant?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=aynmorte89
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=true
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
 
 spring.jpa.hibernate.ddl-auto=update
 
